#272 horizontal scrolling fixed

--- a/css/frontend/main.css
+++ b/css/frontend/main.css
@@ -1097,6 +1097,7 @@ body.dslca-enabled #dslc-content .dslc-post:first-child .dslc-post-thumb .dslc-o
 
 #dslc-content {
 	position: relative;
+	overflow: hidden; /* Fix: Slide Left Temporarily Extends Page Width; */
 }
 
 /**
